feat: Implement the template service